Bug #1288 - Mobile: buttons under the avatar are cut off

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1267,7 +1267,7 @@ body{
     }
 }
 /**group profiles**/
-#course-header-avatar,
+.group-header-avatar,
 #member-header-avatar{
     @media (max-width: @screen-xs-min){
         width: 100%;
